--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,11 @@
 
-# Packages
-
-brotlipy==0.7.0
-certifi==2021.10.8
-cffi @ file:///C:/ci_310/cffi_1642682485096/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-cryptography @ file:///C:/ci/cryptography_1652083563162/work
-idna @ file:///tmp/build/80754af9/idna_1637925883363/work
-mkl-fft==1.3.1
-mkl-random @ file:///C:/ci/mkl_random_1626186184308/work
-mkl-service==2.4.0
-numpy @ file:///C:/ci/numpy_and_numpy_base_1650959323561/work
+matplotlib==3.5.2
 opencv-python==4.5.5.64
+packaging==21.3
 pandas==1.4.2
 Pillow==9.0.1
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
-PySocks @ file:///C:/ci/pysocks_1605307512533/work
-python-dateutil==2.8.2
-pytz==2022.1
-requests @ file:///opt/conda/conda-bld/requests_1641824580448/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
 torch==1.11.0
 torchaudio==0.11.0
 torchsummary==1.5.1
 torchvision==0.12.0
-typing_extensions @ file:///opt/conda/conda-bld/typing_extensions_1647553014482/work
-urllib3 @ file:///C:/ci/urllib3_1650639883891/work
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306162074/work
-wincertstore==0.2
+
